<resources>
    <string name="app_name">AppTurismo</string>
    <string name="oruro">Oruro</string>
    <string name="carnaval">Carnaval</string>
    <string name="atrac">Atractivos Turísticos</string>
    <string name="lugares">Lugares</string>
    <string name="contactos">Contactos</string>
    <string name="strHistoria">"Geografía:
El departamento de Oruro se encuentra a(3706msnm), ubicada al oeste del país, situado entre los 17 ° 58’ de latitud sur y los 67 ° 6' de longitud oeste del meridiano de Greenwich, en plena meseta altiplánica. Su topografía es predominantemente plana, el idioma oficial es el castellano, pero también se habla quechua y aymara, la moneda es el boliviano, el voltaje de electricidad des de 220V.
Oruro ha sido beneficiado con yacimientos minerales como estaño, wolfram, plata, plomo, etc, limita al norte con el departamento de La Paz; al sur con el departamento de Potosí; al este con los departamentos de Cochabamba y Potosí y al oeste con la República de Chile. Tienen una extensión de 53,558 km² y una población de 490 612 habitantes (censo 2012).
Clima
El clima de la capital de Oruro es frío y seco. Su temperatura media anual es de 12 grados centígrados, llegando en verano hasta los 20 °C a media mañana y parte de la tarde. En invierno es frio y poco húmedo, la temperatura regular es de 5°C y de -11°C por la noche.
Orografía
La zona central del departamento de Oruro forma parte de la gran meseta altiplánica. Hacia el noreste penetra al departamento un segmento de la cordillera de Tres Cruces y paralelamente a los lagos Uru – Uru y Poopó corre la cordillera de Azanaques, que divide el agua de las cuencas Central y Lacustre, del Amazonas y del Plata. Las alturas principales son: Negro Pabellón (5400 m), cumbre del Toro (5180 m).
El departamento se ve afectado por la presencia de la cordillera occidental o volcánica en su zona oeste, limítrofe con la república de Chile, en la que se destacan: el Sajama (6542 m), la montaña (en este caso un volcán) más alta de Bolivia) y los Payachatas (Pomarape 6222 m y Parinacota 6132 m). Al sudoeste es importante la cordillera de Sabaya.
Hidrografía
Pertenece a la cuenca central lacustre, sus principales ríos son: Desaguadero, que vincula el lago Titicaca con el lago Poopó; Tacagua; Sevaruyo y Juchusajahuira. Fuera del lago Poopó existe también el lago Coipasa que es también considerado un salar en gran parte de su extensión.
"</string>
    <string name="title_activity_especialidades">Especialidades</string>
    <string name="tab_text_1">Folclóricas</string>
    <string name="tab_text_2">Autóctonas</string>
    <string name="tab_text_3">De reciente Creación</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
